--- a/neuron.ipynb
+++ b/neuron.ipynb
@@ -94,7 +94,8 @@
         "# Install some packages that you will need\n",
         "!pip install quantities\n",
         "# Install the quantities package for keeping track of units and dimensional analysis\n",
-        "import quantities as pq"
+        "import quantities as pq\n",
+        "idk"
       ],
       "execution_count": 0,
       "outputs": [
